--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.2.22",
+    "@langchain/core": "^0.2.18",
+    "formidable": "^3.5.1",
+    "langchain": "^0.2.12",
+    "mammoth": "^1.8.0",
+    "next": "14.2.5",
+    "officeparser": "^4.1.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
